--- a/package.json
+++ b/package.json
@@ -38,10 +38,9 @@
 		"zod": "^3.23.8"
 	},
 	"devDependencies": {
+		"@vercel/style-guide": "latest",
+		"eslint-config-turbo": "latest",
 		"@next/eslint-plugin-next": "^14.1.1",
-		"@repo/eslint-config": "*",
-		"@repo/tailwind-config": "*",
-		"@repo/typescript-config": "*",
 		"@types/cookie": "^0.6.0",
 		"@types/node": "20.11.5",
 		"@types/react": "^18.3.3",
